# MTG-App-HA

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO-history-cleanup.md  config.yaml  mcp-proxy.mjs  pyproject.toml  repository.yaml
.github/workflows/: build-image.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  logging_config.py  main.py  mcp_server.py  scheduler.py  version.py
backend/app/clients/: archidekt.py  cardmarket.py  edhrec.py  flaresolverr.py
backend/app/models/: schemas.py
backend/app/routers/: backup.py  cardmarket.py  collection.py  stats.py  sync.py  wishlist.py
backend/app/services/: cardmarket_import.py  cardmarket_prices.py  ha_publisher.py  queries.py  sell_advisor.py  sync_service.py
docs/: cardmarket-workflow.md  ha-integration.md  mcp-setup.md
frontend/: package.json
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx
frontend/src/components/: ManaSymbol.tsx  Sparkline.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/pages/: Cardmarket.tsx  Collection.tsx  Dashboard.tsx  DeckView.tsx  Decks.tsx  Settings.tsx  Wishlist.tsx
mtg-collection/: CHANGELOG.md  Dockerfile  config.yaml  mcp-proxy.mjs  package-lock.json  run.sh
mtg-collection/backend/: pyproject.toml  requirements-dev.txt
mtg-collection/backend/app/: config.py  main.py  (+5 more)
mtg-collection/frontend/: index.html  package-lock.json  package.json  vite.config.ts
mtg-collection/translations/: en.yaml
mtg-collection/voice/: sentences.yaml
translations/: de.yaml  en.yaml
(+106 files in other folders)
